построил шапку адаптивной верстки

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>BarberShop - Бербершопов</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/outlines.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="main.js"></script>
 </head>
 <body>
