--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/outlines.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="main.js"></script>
+<!--    <script src="main.js"></script> -->
 </head>
 <body>
     <header class="page-header">
