--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
     <header class="page-header">
         <a class="page-header__logo">
-            <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="226" height="30" alt="barbershop">
+            <picture>
+                <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logotype-tablet.png">
+                <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="226" height="30" alt="barbershop">
+            </picture>
         </a>
 
         <nav class="main-nav main-nav--closed main-nav--nojs">
