--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,9 @@
     <title>BarberShop - Бербершопов</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/outlines.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="css/outlines.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
 <!--    <script src="js/main.js"></script>   -->
 </head>
 <body>
