оптимизация загрузка с помощью link rel='preload'

--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,13 @@
     <meta name="format-detection" content="telephone=no">
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <!-- <link rel="stylesheet" href="css/outlines.css"> -->
+    
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="preload" href="js/main.js" as="script">
+    <link rel="preload" href="img/bg-header2x.jpg" as="image">
+    <link rel="preload" href="fonts/PTSansNarrow-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
-<!--    <script src="js/main.js"></script>   -->
+    <!--    <script src="js/main.js"></script>   -->
 </head>
 <body>
     <header class="page-header">
