подключен uglify u htmlmin

--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,10 @@
     <!-- <link rel="stylesheet" href="css/outlines.css"> -->
     
     <link rel="preload" href="/css/style.min.css" as="style">
-    <link rel="preload" href="js/main.js" as="script">
-    <link rel="preload" href="img/bg-header2x.jpg" as="image">
+    <!-- <link rel="preload" href="js/main.min.js" as="script"> -->
+    <!-- <link rel="preload" href="img/bg-header2x.jpg" as="image"> -->
     <link rel="preload" href="fonts/PTSansNarrow-Bold.woff2" as="font">
+    <link rel="preload" href="fonts/PTSansNarrow-Regular.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
     <!--    <script src="js/main.js"></script>   -->
 </head>
@@ -225,6 +226,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
